# navigation

./: .gitignore
install/: local_setup.sh  setup.sh
log/: latest_build
src/isaac/docker_humble_desktop_isaac/: Dockerfile  attach.sh  build.sh  run.sh  run_no_gpu.sh
src/isaac/docker_nav2/: Dockerfile  build.sh  run.sh
src/isaac/docker_rtabmap/: Dockerfile  run.sh
src/isaac/scripts/: monitor_vslam.sh  run_zed2i_cloud_map.sh  run_zed2i_mapping.sh  run_zed2i_native_vio_and_vslam.sh  run_zed2i_pointcloud.sh  run_zed2i_rtabmap.sh  run_zed2i_vslam.sh  zed_setup.sh
src/isaac/src/install/: setup.sh  (+1 more)
src/isaac/src/zed2i_rtabmap/: CMakeLists.txt  package.xml
src/isaac/src/zed2i_rtabmap/config/: rtabmap_params.yaml  zed2i_camera.yaml
src/isaac/src/zed2i_rtabmap/launch/: zed2i_rtabmap_localization.launch.py  zed2i_rtabmap_mapping.launch.py
src/isaac/src/zed2i_rtabmap/rviz/: rtabmap_mapping.rviz  rtabmap_nav.rviz
src/mina_bringup/: CMakeLists.txt  package.xml
src/mina_bringup/launch/: policy_tester_sim.launch.py
src/mina_control/: package.xml  setup.cfg  setup.py
src/mina_control/launch/: control.launch.py  test_dynamic_switch.launch.py
src/mina_control/mina_control/: dynamic_switch.py  mina_fsm.py  mina_vmc.py  rl_controller.py  switch_test_adapter.py
src/mina_control/policies/: model.onnx
src/mina_description/: CMakeLists.txt  package.xml
src/mina_description/launch/: biped_display.launch.py  mina_display.launch.py  mina_rsp.launch.py
src/mina_description/rviz/: mina.rviz
src/mina_description/urdf/: berkeley_humanoid_lite.urdf  berkeley_humanoid_lite_biped.urdf
src/mina_hardware/: package.xml  setup.cfg  setup.py
src/mina_hardware/launch/: hardware.launch.py
src/mina_hardware/mina_hardware/: CAN_driver.py  IMU_driver.py
src/mina_interfaces/: CMakeLists.txt  package.xml
src/mina_interfaces/msg/: Example.msg
src/mina_interfaces/srv/: SwitchControl.srv
src/mina_navigation/: CMakeLists.txt  package.xml
src/mina_navigation/launch/: navigation.launch.py  rtabmap_nav2.launch.py
src/mina_simulation/: CMakeLists.txt  package.xml
src/mina_tasks/: package.xml  setup.cfg  setup.py
(+984 files in other folders)
